--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>url-connection-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
 
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
